style.css
/*Estilos globales*/

/*
Para cumplir con el ejercicio se incluye boostrap en el proyecto, 
pero me rompe las configuraciones globales, por eso las fuerzo un poco
*/
*{
    font-family: 'Red Hat Display', sans-serif !important;
    box-sizing: border-box !important;
    z-index: 1;
}

h1{
    font-size: 48px !important;
    font-weight: 900 !important;
}

h2{
    font-size: 32px !important;
    font-weight: 700 !important;
}

h3{
    font-size: 24px !important;
    font-weight: 700 !important;
}

button{
    background-color: #E02957 !important;
    border: 2px solid rgba(255,255,255,0) !important;
    font-size: 18px !important;
    font-weight: 700 !important;
    color: white !important;
    padding: 12px 24px !important;
    border-radius: 48px !important;
}

button:hover{
    border: 2px solid rgba(255,255,255,1) !important;
    box-shadow: 0 12px 32px rgba(224, 41, 87, 0.5) !important;
}

section{
    padding: 8em 0;
    position: relative;
    overflow: hidden;
}

.multi-column-layout{
    display: flex;
    gap: 48px;
    justify-content: space-between;
}

.max-width-container{
    max-width: 1080px;
    margin: 0 auto;
}

header{
    background-color: rgba(255,255,255,0.2);
    backdrop-filter: blur(20px);
    -webkit-backdrop-filter: blur(20px);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px 32px;
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 99;
}

#logo{
    width: 120px;
    object-fit: contain;
}

header ul{
    padding: 0;
    margin: 0;
    display: flex;
    gap: 32px;
}

header ul li{
    list-style: none;
}

header a{
    color: black;
    font-weight: 700;
    text-decoration: none;
    background-color: rgba(0,0,0,0);
    padding: 12px 24px;
    border-radius: 8px;
}

header a:hover{
    background-color: rgba(0,0,0,0.1);
}

.glower{
    width: 300px;
    height: 300px;
    background-color: #E02957;
    filter: blur(250px);
    position: absolute;
    z-index: 0;
}

/* fin de estilos globales */


/* sections */
#hero-section, #how-it-works-section{
    background-color: #f8f8f8;
}

#hero-section{
    min-height: 100vh;
    margin-top: -100px;
    display: flex;
    align-items: center;
}

#hero-section .glower:nth-child(1){
    bottom:10%;
    left: 10%;
}

#hero-section .glower:nth-child(2){
    top:10%;
    right: 10%;
}

#hero-section img, #contact-section img{
    width: 50%;
    z-index: 1;
}

#hero-section .multi-column-layout, #contact-section .multi-column-layout{
    align-items: center;
}

#contact-section form{
    width: 40%;
}

.team-member-card img{
    width: 200px;
    margin: 56px 0 24px 0;
    border-radius: 50%;
}

.step-card{
    margin: 24px 0 96px 0;
}

.step-card p:nth-child(1){
    font-size: 54px !important;
    font-weight: 700 !important;
    border-bottom: 8px solid #E02957;
    color: #E02957;
    width: max-content;
}

.step-card p:nth-child(2){
    font-size: 16px !important;
    font-weight: 700 !important;
    color: #E02957;
}

